<resources>
    <string name="app_name">S&amp;S WorldWide</string>
    <string name="temp_logo_caption">Insert Sweet S&amp;S Logo Here</string>
    <string name="welcome">Register Below to Join S&amp;S</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="email">Email Address</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_link">New user? Register here</string>
</resources>
